2019-02-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enable show ending zeroes by default

2019-02-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix convert button

2019-01-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support UTC+/-hh[:mm] and CET time zone conversion (using "to")

2019-01-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Nicer display of physical unit relation constant names in completion list

2018-12-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix "gtk_tree_view_scroll_to_cell: assertion 'tree_view->priv->tree != NULL' failed"

2018-11-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce result text size to avoid horizontal scrolling

2018-11-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Wrap history lines and right align results
	* Improved formatting of result in history

2018-11-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Modified keypad layout
	* Replace with icons on RPN stack buttons
	* Use 'linked' widget style where appropriate

2018-10-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Set PrintOptions for messages
	* Fix adaptive interval display (when +/- in expression)
	* Nicer display of lambertw()

2018-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Option to disable automatic conversion to local currency (when optimal conversion is activated)

2018-08-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Polar and exponential complex number forms

2018-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix theme warning with gtk version < 3.20
	* Fix long numbers in RPN operation parse result
	* Fix separator for last history item
	* Remove function parsing hint for "to" expression
	* Allow conversion of the current result using standalone "to" expression (e.g. type "to m" to convert current result to meter)

2018-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* More fine-grained completion settings in preferences dialog