@@ -1,3 +1,12 @@
+2019-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Replace decimal with exact decimal rational numbers when exact mode is activated using button
+
+2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Replacement approximation dropdown menu with exact toggle button
+	* Interval calculation method selection (use variance formula for interval calculation by default)
+
 2019-02-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Enable show ending zeroes by default
